// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tests the Header component 1`] = `
<div
  className="searchDiv"
>
  <h3
    id="searchId"
  >
    SEARCH YOUR FAVOURITE ARTIST
  </h3>
  <hr />
  <div
    className="searchBox"
  >
    <form
      onSubmit={[Function]}
    >
      <input
        className="artistName"
        name="term"
        onChange={[Function]}
        placeholder="Artist Name"
        type="text"
        value=""
      />
      <br />
      <br />
      <button
        className="searchButton"
      >
        SEARCH 
        <svg
          enableBackground="new 0 0 48 48"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          version="1"
          viewBox="0 0 48 48"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="#616161"
          >
            <rect
              height="17"
              transform="matrix(.707 -.707 .707 .707 -15.154 36.586)"
              width="4"
              x="34.6"
              y="28.1"
            />
            <circle
              cx="20"
              cy="20"
              r="16"
            />
          </g>
          <rect
            fill="#37474F"
            height="12.3"
            transform="matrix(.707 -.707 .707 .707 -15.839 38.239)"
            width="4"
            x="36.2"
            y="32.1"
          />
          <circle
            cx="20"
            cy="20"
            fill="#64B5F6"
            r="13"
          />
          <path
            d="M26.9,14.2c-1.7-2-4.2-3.2-6.9-3.2s-5.2,1.2-6.9,3.2c-0.4,0.4-0.3,1.1,0.1,1.4c0.4,0.4,1.1,0.3,1.4-0.1 C16,13.9,17.9,13,20,13s4,0.9,5.4,2.5c0.2,0.2,0.5,0.4,0.8,0.4c0.2,0,0.5-0.1,0.6-0.2C27.2,15.3,27.2,14.6,26.9,14.2z"
            fill="#BBDEFB"
          />
        </svg>
         
      </button>
      <br />
      <select
        className="select"
        onChange={[Function]}
        placeholder="Media"
        value=""
      >
        <option
          value="select"
        >
          Select
        </option>
        <option
          value="all"
        >
          All
        </option>
        <option
          value="movie"
        >
          Movie
        </option>
        <option
          value="podcast"
        >
          Podcast
        </option>
        <option
          value="tvShow"
        >
          TV Show
        </option>
        <option
          value="audiobook"
        >
          Audio Book
        </option>
        <option
          value="shortfilm"
        >
          Short Film
        </option>
        <option
          value="music"
        >
          Songs
        </option>
        <option
          value="ebook"
        >
          E-Book
        </option>
      </select>
      <br />
    </form>
  </div>
  <div
    className="card"
  />
  <br />
  <div
    className="favouriteBlock"
  >
    <div
      className="insideFavourite"
    >
      <h1
        className="hFavourites"
      >
        FAVOURITES
      </h1>
      <div
        className="card"
        id="favouritesId"
      />
    </div>
  </div>
</div>
`;

exports[`tests the I component 1`] = `
<div
  className="searchDiv"
>
  <h3
    id="searchId"
  >
    SEARCH YOUR FAVOURITE ARTIST
  </h3>
  <hr />
  <div
    className="searchBox"
  >
    <form
      onSubmit={[Function]}
    >
      <input
        className="artistName"
        name="term"
        onChange={[Function]}
        placeholder="Artist Name"
        type="text"
        value=""
      />
      <br />
      <br />
      <button
        className="searchButton"
      >
        SEARCH 
        <svg
          enableBackground="new 0 0 48 48"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          version="1"
          viewBox="0 0 48 48"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="#616161"
          >
            <rect
              height="17"
              transform="matrix(.707 -.707 .707 .707 -15.154 36.586)"
              width="4"
              x="34.6"
              y="28.1"
            />
            <circle
              cx="20"
              cy="20"
              r="16"
            />
          </g>
          <rect
            fill="#37474F"
            height="12.3"
            transform="matrix(.707 -.707 .707 .707 -15.839 38.239)"
            width="4"
            x="36.2"
            y="32.1"
          />
          <circle
            cx="20"
            cy="20"
            fill="#64B5F6"
            r="13"
          />
          <path
            d="M26.9,14.2c-1.7-2-4.2-3.2-6.9-3.2s-5.2,1.2-6.9,3.2c-0.4,0.4-0.3,1.1,0.1,1.4c0.4,0.4,1.1,0.3,1.4-0.1 C16,13.9,17.9,13,20,13s4,0.9,5.4,2.5c0.2,0.2,0.5,0.4,0.8,0.4c0.2,0,0.5-0.1,0.6-0.2C27.2,15.3,27.2,14.6,26.9,14.2z"
            fill="#BBDEFB"
          />
        </svg>
         
      </button>
      <br />
      <select
        className="select"
        onChange={[Function]}
        placeholder="Media"
        value=""
      >
        <option
          value="select"
        >
          Select
        </option>
        <option
          value="all"
        >
          All
        </option>
        <option
          value="movie"
        >
          Movie
        </option>
        <option
          value="podcast"
        >
          Podcast
        </option>
        <option
          value="tvShow"
        >
          TV Show
        </option>
        <option
          value="audiobook"
        >
          Audio Book
        </option>
        <option
          value="shortfilm"
        >
          Short Film
        </option>
        <option
          value="music"
        >
          Songs
        </option>
        <option
          value="ebook"
        >
          E-Book
        </option>
      </select>
      <br />
    </form>
  </div>
  <div
    className="card"
  />
  <br />
</div>
`;

exports[`tests the ItuneSearch component 1`] = `
<div
  className="searchDiv"
>
  <h3
    id="searchId"
  >
    SEARCH YOUR FAVOURITE ARTIST
  </h3>
  <hr />
  <div
    className="searchBox"
  >
    <form
      onSubmit={[Function]}
    >
      <input
        className="artistName"
        name="term"
        onChange={[Function]}
        placeholder="Artist Name"
        type="text"
        value=""
      />
      <br />
      <br />
      <button
        className="searchButton"
      >
        SEARCH 
        <svg
          enableBackground="new 0 0 48 48"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          version="1"
          viewBox="0 0 48 48"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="#616161"
          >
            <rect
              height="17"
              transform="matrix(.707 -.707 .707 .707 -15.154 36.586)"
              width="4"
              x="34.6"
              y="28.1"
            />
            <circle
              cx="20"
              cy="20"
              r="16"
            />
          </g>
          <rect
            fill="#37474F"
            height="12.3"
            transform="matrix(.707 -.707 .707 .707 -15.839 38.239)"
            width="4"
            x="36.2"
            y="32.1"
          />
          <circle
            cx="20"
            cy="20"
            fill="#64B5F6"
            r="13"
          />
          <path
            d="M26.9,14.2c-1.7-2-4.2-3.2-6.9-3.2s-5.2,1.2-6.9,3.2c-0.4,0.4-0.3,1.1,0.1,1.4c0.4,0.4,1.1,0.3,1.4-0.1 C16,13.9,17.9,13,20,13s4,0.9,5.4,2.5c0.2,0.2,0.5,0.4,0.8,0.4c0.2,0,0.5-0.1,0.6-0.2C27.2,15.3,27.2,14.6,26.9,14.2z"
            fill="#BBDEFB"
          />
        </svg>
         
      </button>
      <br />
      <select
        className="select"
        onChange={[Function]}
        placeholder="Media"
        value=""
      >
        <option
          value="select"
        >
          Select
        </option>
        <option
          value="all"
        >
          All
        </option>
        <option
          value="movie"
        >
          Movie
        </option>
        <option
          value="podcast"
        >
          Podcast
        </option>
        <option
          value="tvShow"
        >
          TV Show
        </option>
        <option
          value="audiobook"
        >
          Audio Book
        </option>
        <option
          value="shortfilm"
        >
          Short Film
        </option>
        <option
          value="music"
        >
          Songs
        </option>
        <option
          value="ebook"
        >
          E-Book
        </option>
      </select>
      <br />
    </form>
  </div>
  <div
    className="card"
  >
    <div
      className="favouriteBlock"
    >
      <div
        className="insideFavourite"
      >
        <h1
          className="hFavourites"
        >
          FAVOURITES
        </h1>
        <div
          className="card"
          id="favouritesId"
        />
      </div>
    </div>
  </div>
  <br />
</div>
`;
